Changes in Version 1.3
  o Checks for positive definiteness are now built into qgraph(), cor_auto() and EBICglasso(). The nearPD function of Matrix will be used when appropriate.
  o The default for the 'graph' argument is now "default" rather than "association". "association" now checks if the input is a correlation matrix, and will run cov2cor. This means that covariance matrices can now be used for "association", "concentration" and "glasso" graphs.
  o The 'minimum' argument can now be set to "sig" when graph = "association" (correlation network) or graph = "concentration" (partial correlation network). This will set minimum to the value from which correlations become significant. Use 'alpha' and 'bonf' arguments to control significance level. Note that this value is just as arbitrary as any other value for 'minimum'. Also, as usual with the 'minimum' argument the result is only graphical; edges are not omitted but merely not shown. This is important in calculating centrality measures.
  o 'minimum' now defaults to 0 regardless of graph size.
  o Added 'verbose' argument to tell the user what qgraph is doing. (LIMITED SUPPORT NOW)
  o Added the 'threshold' argument which can be used to REMOVE edges under a certain threshold. This argument can also be used to remove non-significant edges in correlation and partial correlation networks. Note that this is different from 'minimum' in that 'minimum' only works graphically and does not display edges while 'threshold' literally removes them. Thus, 'threshold' can be used for model selection where 'minimum' can not, and they result in different spring layouts and centrality measures.
  o Added the 'repulsion' argument, which is a shortcut to specify layout.par = list(repulse.rad = nNodes^(repulsion * 3)). This argument can be used to easily scale the repulsion used by the fruchterman reingold algorithm